Fix home page text overlapping and not centering on smaller screens

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -29,18 +29,38 @@ body {
     padding-right: 30px;
 }
 
+.center-absolute {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: 0;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
+
 .jumbotron {
     @extend .jumbotron;
     background-color: var(--card-background-color);
 
     &.home {
-        .heading {
-            font-size: 90px;
-            padding-bottom: 2rem;
+        height: 550px;
+        position: relative;
+        text-align: center;
+
+        .center-absolute {
+            width: 100%;
         }
 
-        height: 550px;
-        padding: 13.5rem 2rem;
+        .heading {
+            font-size: 90px;
+            line-height: 90px;
+        }
+
+        .lead {
+            font-size: 1.3rem;
+            line-height: 1.3rem;
+            font-weight: 600;
+        }
     }
 }
 
